QDoc: Fix double extension issue for \page commands

QDoc generates output files with double extensions when using `\page`
commands with non-.html extensions. Pages like "\page test.htm" create
"test.htm.html" instead of the expected "test.htm".

This happens because `fileBase()` strips .html extensions but
`fileName()` always adds the output format extension, regardless of user
intent.

This change modifies `fileName()` to detect when page nodes have
explicit non-.html extensions and preserve them completely. The fix only
affects simple page nodes created by `\page` commands, excluding
collection nodes like QML modules to maintain existing behavior for
generated content.

Fixes: QTBUG-140096
Change-Id: Ia817235186f0fea5b3a21512cc76a4a39dba1b1c
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>